# base-rust

./: .dockerignore  .env  .env.example  .env.production.template  .gitignore  API_DOCS.md  AUTH_TEST_DOCUMENTATION.md  Cargo.toml  Dockerfile  FLY_DEPLOYMENT.md  JWT_STORAGE_GUIDE.md  README.md  README_new.md  README_old.md  deploy.bat  deploy.sh  fly.toml  setup-dev.bat  setup-dev.sh  test_api.sh  test_auth.sh  test_auth_flow.sh  test_jwt_auth.sh
.config/: rustfmt.toml
.github/workflows/: deploy.yml
.sqlx/: query-b143a9a235c371bc663f159ea105563ad8ee7806bfad9e285dd67f836bff9b5a.json  query-caf9ccceb3987484dc28c70ca38ac5aff49e1f69453df2bd076f5b62959c5035.json  query-ccd7ff841d389e75929aabe0e383b9b5a0fa230d1a672dd22abcc9d826e989fb.json
examples/: quick_dev.rs
migrations/: 20250622014122_users.sql  20250622174346_contacts.sql  20250622180335_term_of_payments.sql  20250622181514_currencies.sql  20250622183545_attachments.sql  20250622184453_account_classifications.sql  20250622190501_contact_classifications.sql  20250622192416_account_subclassifications.sql  20250626080633_users.sql  20250701102106_users.down.sql  20250701102106_users.up.sql  20250701122207_contacts.down.sql  20250701122207_contacts.up.sql  README.md
src/: errors.rs  main.rs
src/errors/: mod.rs
src/handlers/: account_subclassification.rs  auth.rs  contacts.rs  function.rs  health.rs  mod.rs  root.rs  users.rs
src/middlewares/: auth_resolver_middleware.rs  logging_middleware.rs  mod.rs
src/models/: contact.rs  mod.rs  user.rs
src/res/: mod.rs
src/routes/: README.md  _template.rs  auth.rs  (+3 more)
(+6 files in other folders)
